courses/430_programming-languages/assignment-6/tests/error/hw4_error07.correct
operator '>' requires int * int, found bool * bool
